--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,6 @@
   "rules": { 
     "@typescript-eslint/no-empty-object-type": "off",
     "react/react-in-jsx-scope": "off",
-    "no-unused-vars": [
-      "error",
-      {
-          "varsIgnorePattern": "React"
-      }
-    ]
+    "@typescript-eslint/no-unused-vars": "off"
   }
 }
